<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


    <ListPreference
        android:defaultValue="10"
        android:entries="@array/board_size_labels"
        android:entryValues="@array/board_size_values"
        android:key="@string/pref_key_grid_size"
        android:summary="@string/pref_summary_gridsize"
        android:title="@string/pref_title_gridsize" />




    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_line_color_mode"
        android:summary="@string/pref_summary_line_color"
        android:title="@string/pref_title_line_color" />

    <br.com.anhembi.morumbi.caca.palavra.cidades.brasil.preference.colorpicker.ColorPickerPreference
        android:dependency="@string/pref_key_line_color_mode"
        android:key="@string/pref_key_line_color"
        android:title="@string/pref_title_pencil_color"
        android:summary="@string/pref_summary_pencil_color"
        android:defaultValue="@color/blue" />


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_rounded_line"
        android:summary="@string/pref_summary_pencil_corner"
        android:title="@string/pref_title_pencil_corner"/>


</PreferenceScreen>